--- a/gb/21/10/19/n13315308.md
+++ b/gb/21/10/19/n13315308.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/wtnrng3147/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/wtnrng3147/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/wtnrng3147/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/wtnrng3147/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>Fed调查：全美前10%富人持有近9成美股</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年10月19日讯】（大纪元记者侯骏霖台湾台北报导）根据美国联准会 (Fed) 最新发布的数据显示，全美前10%的<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E5%AF%8C%E4%BA%BA.md#1">富人</a>总计持有89%美国股票，该比重创下历史新高，这意味着股市尽管可以创造大量财富，但却也起到加剧美国<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E8%B4%A2%E5%AF%8C%E5%88%86%E9%85%8D.md#1">财富分配</a>不均的作用。</p>
-<p>综合媒体报导，据Fed统计资料指出，排名全美前10%的<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E5%AF%8C%E4%BA%BA.md#1">富人</a>，持有公司股票及共同基金的规模在今年第2季创下历史新高，其中财富占全美前1%的超级富豪，在疫情期间，透过股票、基金总计赚取超过6.5兆美元（约新台币181兆元）。</p>
+<p>【大纪元2021年10月19日讯】（大纪元记者侯骏霖台湾台北报导）根据美国联准会 (Fed) 最新发布的数据显示，全美前10%的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AF%8C%E4%BA%BA.md#1">富人</a>总计持有89%美国股票，该比重创下历史新高，这意味着股市尽管可以创造大量财富，但却也起到加剧美国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B4%A2%E5%AF%8C%E5%88%86%E9%85%8D.md#1">财富分配</a>不均的作用。</p>
+<p>综合媒体报导，据Fed统计资料指出，排名全美前10%的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%AF%8C%E4%BA%BA.md#1">富人</a>，持有公司股票及共同基金的规模在今年第2季创下历史新高，其中财富占全美前1%的超级富豪，在疫情期间，透过股票、基金总计赚取超过6.5兆美元（约新台币181兆元）。</p>
 <p>反观，全美后90%族群所持有美国股票仅11%，疫情期间只增加1.2兆美元（约新台币33兆元）的财富。</p>
-<p>“股市成为人们创造财富的主要来源，也是加剧<ahref="https://github.com/wtnrng3147/djy/blob/master/gb/tag/%E8%B4%A2%E5%AF%8C%E5%88%86%E9%85%8D.md#1">财富分配</a>不均的主因。”报导指出，如今全美前1%的富人，总财产占全美比重已达32%，创下新高水准；但这些富人过去1年半以来，近7成的财富成长都来自于股票，虽然疫情下有大量年轻散户投入股市，仍避免不了财富分配的集中趋势。</p>
+<p>“股市成为人们创造财富的主要来源，也是加剧<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%B4%A2%E5%AF%8C%E5%88%86%E9%85%8D.md#1">财富分配</a>不均的主因。”报导指出，如今全美前1%的富人，总财产占全美比重已达32%，创下新高水准；但这些富人过去1年半以来，近7成的财富成长都来自于股票，虽然疫情下有大量年轻散户投入股市，仍避免不了财富分配的集中趋势。</p>
 <p>城市布鲁金斯税收政策中心资深研究员罗森泰（Steven Rosenthal）表示，“新进投资人数量虽然庞大，但是规模很小”。他引述目前深受大量散户喜爱的网路券商罗宾汉（Robinhood）数据，平均每一账户规模只有4,500美元。</p>
 <p>罗森泰说，与持有数十万、甚至百万张股票的富人相比，当股市上涨时，新进投资人的获利更显得微不足道；相较纵横市场多年的股市老手来说，年轻族群多以高价买入股票，加上为追求快速获利而拉大杠杆，报酬率仍低于长期买入持有的投资人。</p>
 <p>责任编辑：陈玟绮</p>
@@ -17,47 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/8/24/n13184312.md#1">【十字路口】中共夺私产 投资中国警惕七大风险</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/9/15/n13235707.md#1">【珍言真语】过半中国人无存款 吴明德析原因</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/9/19/n13245487.md#1">从阿里到恒大 习近平20大前清场？（上）</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/9/21/n13250032.md#1">北京要共同富裕？学者：骗取民意支持 稳固政权</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/9/24/n13258531.md#1">程翔：恒大危机重挫港股 大富豪被逼捐钱捐地</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/21/10/17/n13309732.md#1">郝平：中共高调释义“共同富裕” 五大忧患紧逼</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/17/n13584371.md#1">Fed会议纪要：最快3月升息 准备大幅缩表</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13575833.md#1">Fed官员：不支持激进升息</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/11/n13570388.md#1">美1月通膨年增幅 创40年新高</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/1/28/n13536445.md#1">苹果Q1营收创新高 受惠iPhone中国热销</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/8/24/n13184312.md#1">【十字路口】中共夺私产 投资中国警惕七大风险</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/15/n13235707.md#1">【珍言真语】过半中国人无存款 吴明德析原因</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/19/n13245487.md#1">从阿里到恒大 习近平20大前清场？（上）</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/21/n13250032.md#1">北京要共同富裕？学者：骗取民意支持 稳固政权</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/9/24/n13258531.md#1">程翔：恒大危机重挫港股 大富豪被逼捐钱捐地</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/17/n13309732.md#1">郝平：中共高调释义“共同富裕” 五大忧患紧逼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680898.md#1">东南亚4国太阳能板 美拟课关税</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680658.md#1">疫情影响海外供应链 New Balance扩大美国产线</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676376.md#1">花旗：Fed有机会一次升息3码</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/2/n13615938.md#1">战争风险酝酿 市场下调联准会升息预期</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/11/n7543764.md#1" target="_blank">军转干部感恩法轮大法给了第二次生命</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/1/n9913343.md#1" target="_blank">淳子：闺秀文革自杀名单</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/1/10/n2392045.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13574787.md#1">古代修炼文化留给人的启示</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/14/n13574965.md#1">【人生之钥】另外空间的神秘力量如何惩罚盗墓人</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602584.md#1">【拍案惊奇】江苏调查指鹿为马 军委亲审刘亚洲</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/25/n13603459.md#1">杨月清：台湾人都应观看《时代革命》</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13603303.md#1">小歌剧：唱给你的歌</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13598985.md#1">“铁链女”住院画面曝光 长子陪护惹议</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13599362.md#1">袁红冰评乌克兰事件：普京有盘算 中共愚蠢</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/22/n13597148.md#1">【方菲访谈】程晓农：俄乌危机 普京防中共</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/22/n13597525.md#1">毛舜筠探女滞留加拿大 无法返港拍戏呛林郑</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13600024.md#1">香港娱乐圈爆发疫情 逾10名艺人确诊染疫</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/23/n13599881.md#1">容祖儿卖香港一处豪宅套现 亏损逾百万港币</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/22/n13595350.md#1">高血压易致心肌梗塞 这样吃7天降血压</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/12/n13572213.md#1">美国第一健身强人：除了蛋白质 减肥也要吃碳水</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/19/n13589665.md#1">“回春操”只要2动作！防老化 让身体变年轻</a></li>
-<li><a href="https://github.com/wtnrng3147/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679606.md#1">【器乐独奏与协奏曲】柴可夫斯基D大调小提琴协奏曲，作品第35号</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680017.md#1">吴明德：怕政权不稳 中共改行低成本动态清零</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/wtnrng3147/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/19/n13315308.htm">Fed调查：全美前10%富人持有近9成美股</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/19/n13315308.htm">Fed调查：全美前10%富人持有近9成美股</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/wtnrng3147/djy/blob/master/gb/21/10/19/n13315308.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/wtnrng3147/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/wtnrng3147/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/wtnrng3147/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/19/n13315308.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
